[package]
name = "manuscript"
version = "0.1.0"
edition = "2021"
authors = ["Andriy Kushnir (Orhideous) <me@orhideous.name>"]
description = "Your guide in vast inpx-based libraries"
homepage = "https://github.com/Orhideous/manuscript"
readme = "README.md"
keywords = [
    "inpx",
    "fb2"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Orhideous/manuscript"

[dependencies]
